Ajuste no redirecionamento do botão Site Vitrine
- Alterado o link do botão 'Site Vitrine com WhatsApp' para apontar para a página do site vitrine\n- Mantido o target='_blank' para abrir em nova aba

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
             <div class="central-buttons-container">
                 <ul>
                     <li>
-                        <a href="https://wa.me/5541987456598?text=Tenho%20interesse%20no%20Site%20Vitrine%20com%20WhatsApp" target="_blank">
+                        <a href="vitrine-whatsapp/index.html" target="_blank">
                             <i class="fas fa-mobile-alt"></i> Site Vitrine com WhatsApp
                         </a>
                     </li>
