Atualizações: Adicionado status 'Esgotado' ao Fluxo Inteligente e ajustes de responsividade no cabeçalho

--- a/vitrine-whatsapp/index.html
+++ b/vitrine-whatsapp/index.html
@@ -66,7 +66,7 @@
           </div>
         </div>
         
-        <div class="card disponivel">
+        <div class="card esgotado">
           <div class="card-header">
             <h2>Fluxo Inteligente</h2>
           </div>
@@ -79,8 +79,10 @@
             <p class="foco"><strong>Foco:</strong> Solução completa para empresas que buscam automatizar seu atendimento, personalizar interações e acompanhar resultados em tempo real.</p>
           </div>
           <div class="card-footer">
-            <p class="status-disponivel">Disponível!</p>
-            <a href="https://wa.me/5541987456598?text=Tenho%20interesse%20no%20Fluxo%20Inteligente" class="cta-button" target="_blank">Contratar Agora</a>
+            <div class="status-esgotado">
+              <span>Esgotado</span>
+              <small>Devido à alta demanda</small>
+            </div>
           </div>
         </div>
         <div class="card esgotado">
